--- a/Login.html
+++ b/Login.html
@@ -11,15 +11,14 @@
             <div class="header">
                 <a class="home" href="index.html"><img src="image/logo.png"></a>
                 <div style="font-family: Times New Roman" class="header-right">
-                    <a href="search.html">Search & Map</a>
-                    <a href="topRestaurantList.html">Restaurant & Introduction</a>
+                    <a href="Search.html">Searching</a>
+                    <a href="topRestaurantList.html">Top Restaurant List</a>
                     <a href="add_restaurant.html">Add Restaurant</a>
                     <a href="ratingList.html">Rating & Feedback</a>
                     <a href="forumList.html">Q&A Forum</a>
                     <a class="login"href="Login.html">Sign In</a>
                 </div>    
             </div>
-          
         </header>
     <body>
 <div class="bg">
