--- a/Search.html
+++ b/Search.html
@@ -12,7 +12,7 @@
         <div class="header">
             <a class="home" href="index.html"><img src="image/logo.png"></a>
             <div style="font-family: Times New Roman" class="header-right">
-                <a class="active"href="search.html">Searching</a>
+                <a class="active"href="Search.html">Searching</a>
                 <a href="topRestaurantList.html">Top Restaurant List</a>
                 <a href="add_restaurant.html">Add Restaurant</a>
                 <a href="ratingList.html">Rating & Feedback</a>
@@ -20,8 +20,8 @@
                 <a class="login"href="Login.html">Sign In</a>
             </div>    
         </div>
-      
     </header>
+
 
 
         <div class="bg">
