--- a/add_restaurant.html
+++ b/add_restaurant.html
@@ -11,7 +11,7 @@
             <div class="header">
                 <a class="home" href="index.html"><img src="image/logo.png"></a>
                 <div style="font-family: Times New Roman" class="header-right">
-                    <a href="search.html">Searching</a>
+                    <a href="Search.html">Searching</a>
                     <a href="topRestaurantList.html">Top Restaurant List</a>
                     <a class="active"href="add_restaurant.html">Add Restaurant</a>
                     <a href="ratingList.html">Rating & Feedback</a>
@@ -19,7 +19,7 @@
                     <a class="login"href="Login.html">Sign In</a>
                 </div>    
             </div>
-
+        </header>
         <main>
             <div class="bg">
                 <div id="Main" class="clearfix">
