--- a/forumOiso.html
+++ b/forumOiso.html
@@ -13,7 +13,7 @@
         <div class="header">
             <a class="home" href="index.html"><img src="image/logo.png"></a>
             <div style="font-family: Times New Roman" class="header-right">
-                <a href="search.html">Searching</a>
+                <a href="Search.html">Searching</a>
                 <a href="topRestaurantList.html">Top Restaurant List</a>
                 <a href="add_restaurant.html">Add Restaurant</a>
                 <a href="ratingList.html">Rating & Feedback</a>
@@ -21,7 +21,6 @@
                 <a class="login"href="Login.html">Sign In</a>
             </div>    
         </div>
-      
     </header>
 
 
