--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="header">
             <a class="home" href="index.html"><img src="image/logo.png"></a>
             <div style="font-family: Times New Roman" class="header-right">
-                <a href="search.html">Searching</a>
+                <a href="Search.html">Searching</a>
                 <a href="topRestaurantList.html">Top Restaurant List</a>
                 <a href="add_restaurant.html">Add Restaurant</a>
                 <a href="ratingList.html">Rating & Feedback</a>
@@ -24,7 +24,6 @@
                 <a class="login"href="Login.html">Sign In</a>
             </div>    
         </div>
-      
     </header>
         
   
